...
      'Seçtiğiniz turizm bölgesindeki acil personel ilanlarını anında alın.';

  @override
  String get qrPosterTitle => 'QR İlan Posteri';

  @override
  String get createQrPosterAction => 'QR Poster Oluştur';

  @override
  String get sharePosterAction => 'Posteri Paylaş';

  @override
  String get qrPosterScanInstruction =>
...
